# CMU-16833

./: README.md
Final Project/Elevation-Mapping/: .gitignore  README.md
Final Project/Elevation-Mapping/slam_ws/src/drivers/realsense/: CMakeLists.txt  package.xml
Final Project/Elevation-Mapping/slam_ws/src/drivers/realsense/config/: d435i_params.yaml  realsense_static_tf_params.yaml
Final Project/Elevation-Mapping/slam_ws/src/drivers/realsense/launch/: realsense_launch.py
Final Project/Elevation-Mapping/slam_ws/src/launcher/: CMakeLists.txt  package.xml
Final Project/Elevation-Mapping/slam_ws/src/launcher/launch/: gripmap.rviz  launch.py
Final Project/Elevation-Mapping/slam_ws/src/localization/: CMakeLists.txt  package.xml
Final Project/Elevation-Mapping/slam_ws/src/localization/include/localization/: localization.hpp
Final Project/Elevation-Mapping/slam_ws/src/localization/launch/: localization.launch.py
Final Project/Elevation-Mapping/slam_ws/src/localization/src/: localization.cpp  localization_node.cpp
Final Project/Elevation-Mapping/slam_ws/src/mapping/: CMakeLists.txt  package.xml
Final Project/Elevation-Mapping/slam_ws/src/mapping/include/mapping/: bayes_filter.hpp  global_mapping.hpp  local_mapping.hpp  pc_handler.hpp
Final Project/Elevation-Mapping/slam_ws/src/mapping/launch/: mapping.launch.py
Final Project/Elevation-Mapping/slam_ws/src/mapping/src/: bayes_filter.cpp  global_mapping.cpp  global_mapping_node.cpp  local_mapping.cpp  local_mapping_node.cpp  pc_handler.cpp  pc_handler_node.cpp
Final Project/Elevation-Mapping/slam_ws/src/sensing/: CMakeLists.txt  package.xml
Final Project/Elevation-Mapping/slam_ws/src/sensing/config/: zed_static_tf_params.yaml
Final Project/Elevation-Mapping/slam_ws/src/sensing/launch/: sensing_launch.py
Final Project/Elevation-Mapping/slam_ws/src/visualization/: CMakeLists.txt  package.xml
Final Project/Elevation-Mapping/slam_ws/src/visualization/include/visualization/: visualization.hpp
Final Project/Elevation-Mapping/slam_ws/src/visualization/launch/: visualization.launch.py
Final Project/Elevation-Mapping/slam_ws/src/visualization/src/: visualization.cpp  visualization_node.cpp
Final Project/MGF-Localization/: README.md
Final Project/MGF-Localization/Expectation Representation/: main.py  main2.py
Final Project/MGF-Localization/Functional Representation/: MGF1.py  MGF2.py
Final Project/MGF-Localization/sample_data/map/: 1D_map.txt
PS1/: tips_for_students.md
PS1/code/: main.py  motion_model.py  resampling.py  sensor_model.py
PS1/tex/: writeup_16833_HW1_ParticleFilter.lyx  writeup_16833_HW1_ParticleFilter.tex
PS2/code/: ekf_slam.py
PS3/code/: install_deps.sh  linear.py  nonlinear.py  solvers.py
PS4/HW4_ICP/: ScreenCamera_2025-04-03-14-41-51.json  fusion.py  icp.py
