######
# Initially written for SLAM project by Boxiang Fu (boxiangf@cs.cmu.edu)
######

cmake_minimum_required(VERSION 3.8)
project(launcher)

# Default to C++20
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 20)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find directory
add_definitions(-DLAUNCHER_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")

# find dependencies
find_package(ament_cmake REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

# Install directories
install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
